app/assets/stylesheets/_orders.scss
.orders-header {
  padding: 15px $grid-gutter-width 0 $grid-gutter-width;
  background-color: $gray-lighter;
  margin-bottom: 25px;

  .back {
    padding-top: 7px;
  }

  .order-search {
    @include clearfix;

    label {
      float: left;
      margin-right: 20px;
      padding-top: 7px;
    }
    input {
      width: 500px;
    }
  }

  .nav-tabs {
    margin: 50px -$grid-gutter-width 0 -$grid-gutter-width;
    padding: 0 $grid-gutter-width;
  }
}

.orders-actions {
  padding-top: 20px;

  & > * {
    float: left;
    margin-right: 40px;
  }
}

.orders-cockpit {
  .cockpit-header {
    @include clearfix;
    padding-bottom: 25px;
    margin: 0 auto;
    width: 700px;
  }

  .cockpit-header-item {
    float: left;
    margin-right: 50px;

    .figure-label {
      margin-right: 10px;
    }
    .unit {
      margin-right: 30px;
    }
  }

  .title, .figure, .unit {
    color: $gray-darker;
  }
  .figure {
    font-size: 18px;
    font-weight: 500;
  }
  .figure-label, .unit {
    font-size: 12px;
    font-weight: 400;
  }

  .cockpit-table {
    position: relative;
    width: 100%;
  }

  // First column with fixed width, the scrollable one is fluid
  $static-width: 200px;

  // Each row height = 3 lines + vertical padding
  $row-line-height: 24px;
  $cell-padding: 12px;

  table.static,
  .scrollable table {
    tr {
      border-top: 1px solid $gray-light;
      &:last-child {
        border-bottom: 1px solid $gray-light;
      }

      [class^="icon-"], [class*=" icon-"] {
        color: $brand-primary;
      }
    }
    td, th {
      width: 170px;
      min-width: 170px;
      padding: $cell-padding;
      @include ellipsis(true);
    }

    td {
      height: ($row-line-height*3) + ($cell-padding*3);
      vertical-align: top;
    }

    th {
      background-color: #f4f4f4;
      @include ellipsis(true);
    }
    th > span {
      border-bottom: 1px dashed #aaa;
      cursor: help;
    }

    .data-item {
      height: $row-line-height;
    }
  }

  table.static {
    position: relative;
    z-index: 20;
    width: $static-width;
    @include box-shadow(10px 0 5px -2px rgba(208, 208, 208, 0.4));

    .title, .subtitle {
      height: $row-line-height;
    }
  }
  .scrollable {
    position: absolute;
    top: 0;
    left: $static-width;
    right: 0;
    z-index: 10;
    overflow-x: auto;

    table {
      width: 100%;
      th, td, td .data-item {
        text-align: right;
      }

      td:nth-child(2n) {
        background-color: $gray-lighter;
      }

      th:nth-child(2n) {
        background-color: #ebebeb;
      }
    }
  }
}

.order-target {
  .btn-group-justified {
    width: auto !important;
  }
}

